# protein-plate-v2

./: .gitignore  404.html  CONTRIBUTING.md  DESIGN.md  LICENSE  LICENSE-CONTENT  README.md  SCHEMA.md  WIRING.md  extra.css  gen_pages.py  grocery-checklist.js  grocery-scope.js  grocery.py  index.html  keto.md  main.html  manifest.json  meal-plan.js  mkdocs.yml  planner-preview.html  pwa.js  pyproject.toml  render.py  serving-scaler.js  sitemap.xml  sw.js  the-plate.md
.github/workflows/: deploy.yml  validate-data.yml
about/: index.html
data/: ingredients.yaml  meal_plan.yaml
data/recipes/: besan-moong-cheela.yaml  big-leafy-salad.yaml  boiled-eggs.yaml  buttermilk-chaas.yaml  chana-masala.yaml  chicken-tikka-tawa.yaml  chicken-veg-stirfry.yaml  curd-vegetable-raita.yaml  egg-bhurji.yaml  green-chutney.yaml  green-soup.yaml  grilled-paneer-tawa.yaml  hummus.yaml  kachumber.yaml  moong-sprouts-usal.yaml  paneer-bhurji.yaml  sauteed-greens-bean-sabzi.yaml  sauteed-mixed-vegetables.yaml  toasted-nuts-seeds.yaml  vegetable-omelette.yaml
docs/: about.md  index.md  keto.md  the-plate.md
docs/assets/css/: extra.css
grocery-list/: index.html
ingredients/: index.html
keto/: index.html
meal-plan/: index.html
proteinplate/: __init__.py  data.py  grocery.py  render.py  units.py  webdata.py
recipes/: index.html
schema/: recipe.schema.json
scripts/: bootstrap_import.py  build_grocery_list.py  preview_pages.py  validate.py
search/: search_index.json
tests/: gen_parity.py  grocery_parity.mjs  test_grocery_units.py
the-plate/: index.html
(+3 files in other folders)
